--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,7 +16,7 @@
       </div>
     </nav>
     <section class="profile">
-      <img src="{{user.titlePhoto}}" alt="avatar" style="box-shadow: 0 8px 16px 5px rgba(46, 43, 43, 0.897);;"><br><br>
+      <img src="{{user.titlePhoto}}" alt="avatar" style="box-shadow: 0 8px 16px 5px rgba(46, 43, 43, 0.897);"><br><br>
       <h2><b>{{user.firstName}} {{user.lastName}}</b></h2>
       <h4 class="font-yellow"><b>{{user.rating}}</b> || <span class="custom-rank-color"><b>{{user.rank}}</b><span></span></h4>
       <b>Last Online : </b>{{lastOnline}}<br>
@@ -36,7 +36,7 @@
       <div class="tag">
         <h2>{{key}}</h2><br>
         {% for problem in problems %}
-        <h3><a href="{{problem.1}}" class"problem" target="_blank">{{problem.0}}</a></h3>
+        <a href="{{problem.1}}" target="_blank" style="text-decoration: none;"><h3>{{problem.0}}</h3></a>
         {% endfor %}
       </div>
       {% endfor %}
