--- a/static/profile.css
+++ b/static/profile.css
@@ -4,7 +4,7 @@
 	box-sizing: border-box;
 }
 body{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 nav{
 	width: 100%;
@@ -45,13 +45,11 @@ nav{
 .profile{
     text-align: center;
     margin-top:70px;
-    background-color: rgb(209, 173, 209);
     padding: 10px;
 }
 .tags{
     padding: 20px;
     text-align: center;
-    background-color: rgb(153, 122, 153);
 }
 .row{
 	display: flex;
@@ -68,10 +66,31 @@ nav{
     padding: 40px;
     margin-top: 10px;
     margin-bottom: 25px;
+    border-radius: 5px;
     color: brown;
-    background: #c0a8a8;
+    background: #e9cdb3;
     text-align: center;
     box-shadow: 0 8px 16px 5px rgba(46, 43, 43, 0.897);;
+}
+.hrstyle{
+    border: 1px solid white;
+}
+.mode {
+    float:right;
+    margin-top: 5px;
+}
+.change {
+    cursor: pointer;
+    border: 1px solid #555;
+    border-radius: 40%;
+    width: 20px;
+    text-align: center;
+    padding: 5px;
+    margin-left: 4px;
+}
+.dark{
+    background-color: rgb(80, 75, 75);
+    color: #e6e6e6;
 }
 @media screen and (max-width:500px){
     nav{
@@ -85,5 +104,11 @@ nav{
     }
     .profile{
         margin-top: 50px;
+    }
+    .change{
+        font-size: 8px;
+    }
+    .mode{
+        font-size: 8px;
     }
 }
