--- a/templates/profile.html
+++ b/templates/profile.html
@@ -33,14 +33,16 @@
     </section>
     <hr>
     <section class="tags">
-      <h1><u>Suggested</u> Practice Problems for <span style="background-color: rgb(127, 146, 109); padding: 1px 5px;">{{user.handle}}</span></h1><br>
+      <h1><u>Suggested</u> Practice Problems for <span style="background-color: rgb(99, 127, 189); padding: 1px 5px;">{{user.handle}}</span></h1><br>
       <div class="row">
       {% for key,problems in tags.items() %}
       <div class="tag">
-        <h1>{{key}}</h1><br>
+        <h1 style="text-transform:capitalize; font-size: 30px; text-align: center;">{{key}}</h1><br>
+        <ul>
         {% for problem in problems %}
-        <a href="{{problem.1}}" target="_blank" style="text-decoration: none;"><h3 style="color: rgb(92, 91, 91);">{{problem.0}}</h3></a>
+        <li style="padding-left: 5px;font-size: large;color: black;"><a href="{{problem.1}}" target="_blank">{{problem.0}}</a></li>
         {% endfor %}
+      </ul>
       </div>
       {% endfor %}
     </div>
