--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,8 @@
     <div data-validate="Username is required">
       <input type="text" name="username" required placeholder="Codeforces Username" />
     </div>
-    <input type="submit" value="Enter">
+    <input type="submit" value="Enter"><br>
+    <span style="background-color: whitesmoke;padding: 10px;font-size: smaller;">View project <a href="https://github.com/prackode" target="_blank"><img align="center" src="https://cdn.jsdelivr.net/npm/simple-icons@3.0.1/icons/github.svg" alt="prackode" height="20" width="20" /></a></span>
   </form>
   {% if give_error %}
   <script>alert("Username Doesn't Exist");</script>
