--- a/static/login.css
+++ b/static/login.css
@@ -3,18 +3,18 @@
 	box-sizing: border-box;
 }
 body{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background: border-box;
-    background-color: rgb(13, 155, 155);
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background:url('creed.jpg');
+    background-size: cover;
 }
 .box{
     border-radius: 7px;
     width: 350px;
     padding: 40px;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+    top: 30%;
+    left: 46%;
+    transform: translate(-100%,-30%);
     background: #181717;
     text-align: center;
 }
@@ -54,4 +54,13 @@ body{
 }
 .box input[type = "submit"]:hover{
     background: #2ecc71;
+}
+@media screen and (max-width:500px){
+    body{
+        background: border-box;
+        background-color: rgb(13, 155, 155);
+    }
+    .box{
+        transform: translate(-46%,-30%);
+    }
 }
