--- a/static/profile.css
+++ b/static/profile.css
@@ -72,6 +72,10 @@ nav{
     text-align:left;
     box-shadow: 0 8px 16px 5px rgba(46, 43, 43, 0.897);;
 }
+.tag:hover{
+	transform: translateY(-10px);
+	transition: 0.4s ease;
+}
 .tag a{
     color: rgb(102, 100, 100);
     text-decoration: none;
