updated profile and login page

--- a/static/profile.css
+++ b/static/profile.css
@@ -1,46 +1,46 @@
-*{
-	padding:0; 
-	margin:0; 
-	box-sizing: border-box;
+{
+    padding:0; 
+    margin:0; 
+    box-sizing: border-box;
 }
 body{
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 nav{
-	width: 100%;
-	height: 70px;
-	border-bottom: 1px solid grey;
-	box-shadow: 2px 0px 5px rgb(0, 0, 0);
-	display:flex;
-	justify-content: space-around;
-	align-items: center;
-	position: fixed;
-	top:0;
-	z-index: 2;
-	background:rgb(81, 184, 149);
+    width: 100%;
+    height: 70px;
+    border-bottom: 1px solid grey;
+    box-shadow: 2px 0px 5px rgb(0, 0, 0);
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+    position: fixed;
+    top:0;
+    z-index: 2;
+    background:rgb(81, 184, 149);
 }
 .logo{
-	font-size: 40px;
-	font-weight: bold;
-	display:inherit;
+    font-size: 40px;
+    font-weight: bold;
+    display:inherit;
     background-color: black;
-	color: white;
+    color: white;
     padding: 2px 10px;
     border-radius: 5px;
 }
 .menu a{
-	text-decoration: none;
+    text-decoration: none;
     margin: 5px;
-	font-size: 20px;
-	color: black;
-	padding: 2px 10px;
-	font-weight: bold;
+    font-size: 20px;
+    color: black;
+    padding: 2px 10px;
+    font-weight: bold;
     background: rgb(169, 216, 94);
 }
 .menu a:last-child{
-	font-family: monospace;
-	background: rgb(39, 38, 38);
-	color: white;
+    font-family: monospace;
+    background: rgb(39, 38, 38);
+    color: white;
 }
 .profile{
     text-align: center;
@@ -52,9 +52,9 @@ nav{
     text-align: center;
 }
 .row{
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     flex-flow: row wrap;
     flex-wrap: wrap;
 }
@@ -68,13 +68,13 @@ nav{
     margin-bottom: 25px;
     border-radius: 5px;
     color: rgb(36, 133, 6);
-    background: #e9cdb3;
+    background: rgb(169, 216, 94);
     text-align:left;
     box-shadow: 0 8px 16px 5px rgba(46, 43, 43, 0.897);;
 }
 .tag:hover{
-	transform: translateY(-10px);
-	transition: 0.4s ease;
+    transform: translateY(-10px);
+    transition: 0.4s ease;
 }
 .tag a{
     color: rgb(102, 100, 100);
@@ -101,8 +101,8 @@ nav{
     margin-left: 4px;
 }
 .dark{
-    background-color: rgb(80, 75, 75);
-    color: #e6e6e6;
+    background-color: rgb(17, 16, 16);
+    color: #f8f8f8;
 }
 @media screen and (max-width:500px){
     nav{
