--- a/templates/profile.html
+++ b/templates/profile.html
@@ -51,6 +51,7 @@
       <button type="submit">Refresh Problems</button>
   </form>
     </section>
+    <center><a href="https://www.freecounterstat.com" title="website counter"><img src="https://counter6.stat.ovh/private/freecounterstat.php?c=ez5wsh6fn3nq8uncln31912sxateyrj1" border="0" title="website counter" alt="website counter"></a></center>
     <script>
       $( ".change" ).on("click", function() {
           if( $( "body" ).hasClass( "dark" )) {
